@@ -3,6 +3,9 @@ Version TBC:
  * Add option to change bitmap visualisation image background to a
    chosen colour (#258).
 
+ * Copy and save full-size image with alpha channel from bitmap
+   visualisation instead of the preview image.
+
 Version 0.63.2 (2025-07-13):
 
  * Add missing file required for binary template support.
